c++: designator and anon struct [PR101767]

We found .x in the anonymous struct, but then didn't find .y there; we
should decide that means we're done with the struct rather than that the
code is wrong.

	PR c++/101767

gcc/cp/ChangeLog:

	* decl.cc (reshape_init_class): Back out of anon struct
	if a designator doesn't match.

gcc/testsuite/ChangeLog:

	* g++.dg/ext/anon-struct10.C: New test.